2008-05-23  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #534476

	* gui/e-cal-popup.c (ecalp_standard_menu_factory):
	Remove the special check for "winmail.dat".  GIO correctly
	identifies it as "application/ms-tnef".

2008-05-23  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #523402

	* gui/e-calendar-view.c: (e_calendar_view_add_event): Do not leak.
	* conduits/calendar/calendar-conduit.c: (process_multi_day):
	Reassign back the old values before freeing.

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	* gui/e-select-names-renderer.c
	(e_select_names_renderer_focus_out_event):
	Remove this unused function.

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #534360

	* conduits/calendar/calendar-conduit.c:
	* conduits/memo/memo-conduit.c:
	* conduits/todo/todo-conduit.c:
	* gui/cal-search-bar.c:
	* gui/cal-search-bar.h:
	* gui/calendar-commands.c:
	* gui/calendar-view-factory.h:
	* gui/calendar-view.h:
	* gui/comp-editor-factory.h:
	* gui/dialogs/comp-editor-page.c:
	* gui/dialogs/comp-editor-page.h:
	* gui/dialogs/comp-editor.h:
	* gui/dialogs/e-delegate-dialog.h:
	* gui/dialogs/event-editor.h:
	* gui/dialogs/event-page.h:
	* gui/dialogs/memo-editor.h:
	* gui/dialogs/memo-page.h:
	* gui/dialogs/recurrence-page.c:
	* gui/dialogs/recurrence-page.h:
	* gui/dialogs/schedule-page.h:
	* gui/dialogs/task-details-page.h:
	* gui/dialogs/task-editor.h:
	* gui/dialogs/task-page.h:
	* gui/e-alarm-list.c:
	* gui/e-alarm-list.h:
	* gui/e-cal-component-memo-preview.h:
	* gui/e-cal-component-preview.h:
	* gui/e-cal-list-view-config.h:
	* gui/e-cal-list-view.h:
	* gui/e-calendar-table-config.h:
	* gui/e-calendar-table.h:
	* gui/e-cell-date-edit-config.h:
	* gui/e-cell-date-edit-text.h:
	* gui/e-date-edit-config.h:
	* gui/e-date-time-list.c:
	* gui/e-date-time-list.h:
	* gui/e-day-view-config.h:
	* gui/e-day-view-main-item.c:
	* gui/e-day-view-main-item.h:
	* gui/e-day-view-time-item.c:
	* gui/e-day-view-time-item.h: